test: Java 1.8 버전 변경으로 인한 List.of -> Arrays.asList 변경