@@ -9,6 +9,7 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 
 import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
+import java.util.Arrays;
 import java.util.List;
 import kitchenpos.domain.MenuProduct;
 import kitchenpos.domain.Order;
@@ -31,7 +32,7 @@ class OrderAcceptanceTest extends AcceptanceTest {
         // given
         메뉴_그룹_생성_요청("후라이드세트");
         제품_생성_요청("후라이드", 16_000);
-        final List<MenuProduct> 메뉴_제품들 = List.of(new MenuProduct(1L, 1L, 1L, 2));
+        final List<MenuProduct> 메뉴_제품들 = Arrays.asList(new MenuProduct(1L, 1L, 1L, 2));
         메뉴_생성_요청("반반후라이드", 16_000, 1L, 메뉴_제품들);
         테이블_주문_번호_생성_요청(3, false);
     }
@@ -48,7 +49,7 @@ class OrderAcceptanceTest extends AcceptanceTest {
     @DisplayName("주문을 하면 주문내역에서 조회할 수 있다.")
     void createOrder() {
         // given
-        final Order 예상된_주문_결과 = new Order(1L, 1L, OrderStatus.COOKING.name(), null, List.of(new OrderLineItem(1L, 1L)));
+        final Order 예상된_주문_결과 = new Order(1L, 1L, OrderStatus.COOKING.name(), null, Arrays.asList(new OrderLineItem(1L, 1L)));
 
         // when
         final ExtractableResponse<Response> 주문_요청_결과 = 주문_요청(1L, 1L, 1L);
@@ -56,7 +57,7 @@ class OrderAcceptanceTest extends AcceptanceTest {
 
         // then
         final ExtractableResponse<Response> 주문_조회_결과 = 주문_조회();
-        주문_조회_결과_확인(주문_조회_결과, List.of(예상된_주문_결과));
+        주문_조회_결과_확인(주문_조회_결과, Arrays.asList(예상된_주문_결과));
     }
 
     /**
@@ -84,7 +85,7 @@ class OrderAcceptanceTest extends AcceptanceTest {
 
     public static ExtractableResponse<Response> 주문_요청(Long 테이블_번호, Long 메뉴_번호, Long 갯수) {
         final OrderLineItem 메뉴_번호_및_갯수 = new OrderLineItem(메뉴_번호, 갯수);
-        return RestAssuredHelper.post(ORDER_URI, new Order(테이블_번호, List.of(메뉴_번호_및_갯수)));
+        return RestAssuredHelper.post(ORDER_URI, new Order(테이블_번호, Arrays.asList(메뉴_번호_및_갯수)));
     }
 
     public static void 주문_요청_결과_확인(ExtractableResponse<Response> 주문_요청_결과) {
